--- a/style.css
+++ b/style.css
@@ -54,11 +54,15 @@ nav a:hover::after {
 }
 
 /* Highlight the current page in navigation */
-body.home nav a[href="index.html"],
-body.dichtung nav a[href="dichtung.html"],
-body.bild nav a[href="bild.html"] {
+nav a.active {
   color: #004499;
 }
+
+nav a.active::after {
+  width: 100%;
+}
+
+/* JavaScript can add this "active" class to the current nav link */
 
 main {
   padding: 2em;
@@ -194,29 +198,29 @@ img:hover {
     padding: 1em;
     gap: 1em;
   }
-  
+
   main {
     padding: 1.5em;
     margin: 1em;
   }
-  
+
   h1 {
     font-size: 2em;
   }
-  
+
   .image-grid {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 1.5em;
   }
-  
+
   .slider-container {
     max-width: 100%;
   }
-  
+
   .slider {
     aspect-ratio: 1/1.25;
   }
-  
+
   .slider-btn {
     width: 36px;
     height: 36px;
