--- a/style.css
+++ b/style.css
@@ -227,3 +227,9 @@ img:hover {
     font-size: 16px;
   }
 }
+
+body.home {
+  background: url('background.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+
