--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ img:hover {
 }
 
 body.home {
-  background: url('background.jpg') no-repeat center center fixed;
-  background-size: cover;
+  background: url('background.jpg') no-repeat center center fixed !important;
+  background-size: cover !important;
 }
 
