--- a/style.css
+++ b/style.css
@@ -62,8 +62,6 @@ nav a.active::after {
   width: 100%;
 }
 
-/* JavaScript can add this "active" class to the current nav link */
-
 main {
   padding: 2em;
   max-width: 1000px;
@@ -228,8 +226,8 @@ img:hover {
   }
 }
 
+/* Home page background image */
 body.home {
-  background: url('background.jpg') no-repeat center center fixed !important;
+  background: url('https://www.maximilianjuhasz.net/background.jpg') no-repeat center center fixed !important;
   background-size: cover !important;
 }
-
