--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  background-color: #f7f7f7;
+  background-color: transparent;
   color: #333;
   line-height: 1.7;
   padding-top: 20px;
@@ -164,8 +164,9 @@ img:hover {
   nav {
     flex-direction: column;
     align-items: center;
-    padding: 1em;
     gap: 1em;
+    background-color: transparent;
+    padding: 0;
   }
   main {
     padding: 1.5em;
