--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ img:hover {
 }
 /* Home page background image */
 body.home {
-  background: url('https://www.maximilianjuhasz.net/background.jpg') no-repeat center center fixed !important;
+  background: var(--background-image, url('background.jpg')) no-repeat center center fixed !important;
   background-size: cover !important;
+  transition: background-image 1s ease-in-out;
 }
